Fix that scrollbar is applied to #root instead of window.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,8 +23,6 @@ html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 body {
